--- a/posts/hw2/hw2.qmd
+++ b/posts/hw2/hw2.qmd
@@ -2,7 +2,7 @@
 title: "LS Bigdata School Homework 2"
 author: Ahyeong Jeong
 date: "2024-07-17"
-categories: [bigdata]
+categories: [homework]
 ---
 ## p.144
 #### Q1. 자동차 배기량에 따라 고속도로 연비가 다른지 알아보자
