--- a/posts/hw5/hw5.qmd
+++ b/posts/hw5/hw5.qmd
@@ -16,7 +16,7 @@ import matplotlib.pyplot as plt
 def normal(x, mu, sigma):
     a= 1 / (np.sqrt(2 * np.pi * sigma**2))
     b = -((x - mu)**2) / (2 * sigma**2)
-    return a * b
+    return a * np.exp(b)
 mu = 3
 sigma = 2
 x = np.linspace(mu - 4*sigma, mu + 4*sigma, 100)
@@ -34,12 +34,12 @@ plt.show()
 ```{python}
 # 1)
 from scipy.stats import norm
-norm.pdf(3, loc=2, scale=3)
+norm.cdf(3, loc=2, scale=3)
 #2)
-norm.pdf(5, loc=2, scale=3)
+norm.cdf(5, loc=2, scale=3) - norm.cdf(2, loc=2, scale=3)
 #3)
-p1 = norm.pdf(3, loc=2, scale=3)
-p2 = 1 - norm.pdf(7, loc=2, scale=3)
+p1 = norm.cdf(3, loc=2, scale=3)
+p2 = 1 - norm.cdf(7, loc=2, scale=3)
 p1+p2
 ```
 
