--- a/posts/hw5/hw5.qmd
+++ b/posts/hw5/hw5.qmd
@@ -17,10 +17,9 @@ def normal(x, mu, sigma):
     a= 1 / (np.sqrt(2 * np.pi * sigma**2))
     b = -((x - mu)**2) / (2 * sigma**2)
     return a * np.exp(b)
-mu = 3
-sigma = 2
-x = np.linspace(mu - 4*sigma, mu + 4*sigma, 100)
-y = normal(x, mu, sigma)
+
+x = np.linspace(-10, 15, 100)
+y = normal(x = x, mu = 3, sigma= 2)
 plt.plot(x, y, color = "r", linewidth = 2)
 plt.show()
 ```
