--- a/posts/hw5/hw5.qmd
+++ b/posts/hw5/hw5.qmd
@@ -33,19 +33,19 @@ plt.show()
 ```{python}
 # 1)
 from scipy.stats import norm
-norm.cdf(3, loc=2, scale=3)
+print('P(X < 3): ', norm.cdf(3, loc=2, scale=3))
 #2)
-norm.cdf(5, loc=2, scale=3) - norm.cdf(2, loc=2, scale=3)
+print('P(2 < X < 5): ', norm.cdf(5, loc=2, scale=3) - norm.cdf(2, loc=2, scale=3))
 #3)
 p1 = norm.cdf(3, loc=2, scale=3)
 p2 = 1 - norm.cdf(7, loc=2, scale=3)
-p1+p2
+print('P(X < 3 or X > 7): ', p1+p2)
 ```
 
 
 3. LS 빅데이터 스쿨 학생들의 중간고사 점수는 평균이 30이고, 분산이 4인 정규분포를 따른다.
 상위 5%에 해당하는 학생의 점수는?
 ```{python}
-norm.ppf(0.95, 30, 2)
+print('상위 5%에 해당하는 학생의 점수): ', norm.ppf(0.95, 30, 2))
 ```
 
