UPDATE - stat - sample variance

--- a/posts/hw6/hw6.qmd
+++ b/posts/hw6/hw6.qmd
@@ -44,6 +44,6 @@ plt.show()
 plt.clf()
 ```
 
--   두 그래프를 봤을 때, `s_2`의 분포그래프에선 모분산을 나타내는 녹색축을 중심을 두고 분포된 것을 알 수 있다.
--   반면, `k_2`의 분포그래프에선 모분산을 나타내는 녹색축을 중심으로 왼쪽으로 편향된 것이 확인된다.
+-   두 그래프를 봤을 때, `s_2`의 분포그래프가 모분산을 나타내는 녹색축을 중심을 두고 분포된 것을 알 수 있다.
+-   반면, `k_2`의 분포그래프가 모분산을 나타내는 녹색축을 중심으로 왼쪽으로 편향된 것이 확인된다.
 -   따라서 n-1로 나눈 `s_2`가 모분산을 더 잘 추정한다고 할 수 있다.
