--- a/posts/hw6/hw6.qmd
+++ b/posts/hw6/hw6.qmd
@@ -21,7 +21,9 @@ categories: [Statistics]
 
 **0. 필요한 패키지 가져오기**
 ```{python}
+import numpy as np
 from scipy.stats import uniform
+import seaborn as sns 
 import matplotlib.pyplot as plt
 ```
 
@@ -31,11 +33,13 @@ import matplotlib.pyplot as plt
 x=uniform.rvs(loc=3, scale=7, size=20*10000)
 x=x.reshape(-1, 20)
 x.shape
+pop_var = uniform.var(loc=3, scale=7)
 ```
 ```{python}
-s_2 = x.var(axis=1, ddof=1)
-plt.hist(s_2, color = "lightpink")
-plt.axvline(x.var(), color="green")
+s_2 = np.var(x, axis=1, ddof=1)
+sns.histplot(s_2, stat='density', color = "lightpink")
+plt.axvline(pop_var, color="red", linestyle = '--')
+plt.xlim([0, 8])
 plt.show()
 plt.clf()
 ```
@@ -45,9 +49,10 @@ plt.clf()
 **2. `k_2` 분포 그래프 그리기**
 
 ```{python}
-k_2 = x.var(axis=1, ddof=0)
-plt.hist(k_2, color = "lightpink")
-plt.axvline(x.var(), color="green")
+k_2 = np.var(x, axis=1, ddof=0)
+sns.histplot(k_2, stat='density', color = "lightblue")
+plt.axvline(pop_var, color="red", linestyle = '--')
+plt.xlim([0, 8])
 plt.show()
 plt.clf()
 ```
