--- a/posts/hw7.qmd
+++ b/posts/hw7.qmd
@@ -87,25 +87,36 @@ m_bar = np.mean(m_income)
 
 2. 표본표준편차 사용해서 모표분편차 추정
 ```{python}
-f_var = np.var(f_income, ddof=1)
-m_var = np.var(m_income, ddof=1)
+f_std = np.sqrt(np.var(f_income, ddof=1))
+m_std = np.sqrt(np.var(m_income, ddof=1))
+```
+
+3. 성별 별 표본 개수 구하기
+```{python}
+f_n = len(f_income)
+m_n = len(m_income)
+```
+
+4. z
+```{python}
+z_0025 = norm.ppf(0.975, loc=0, scale=1)
 ```
 
 
 __성별 별로 신뢰구간 계산하기__
 ```{python}
-f_conv1 = norm.ppf(0.025, loc = f_bar, scale = np.sqrt(f_var))
-f_conv2 = norm.ppf(0.975, loc = f_bar, scale = np.sqrt(f_var))
-m_conv1 = norm.ppf(0.025, loc = m_bar, scale = np.sqrt(m_var))
-m_conv2 = norm.ppf(0.975, loc = m_bar, scale = np.sqrt(m_var))
+f_conv1 = f_bar - z_0025 * f_std/np.sqrt(f_n)
+f_conv2 = f_bar + z_0025 * f_std/np.sqrt(f_n)
+m_conv1 = m_bar - z_0025 * f_std/np.sqrt(m_n)
+m_conv2 = m_bar + z_0025 * f_std/np.sqrt(m_n)
 ```
 
 
 __그래프에 나타내기__
 ```{python}
 sns.barplot(data = sex_income, x = 'sex', y = 'mean_income', hue = "sex")
-plt.vlines(x = "female", ymin = f_conv1, ymax = f_conv2, colors = "green")
-plt.vlines(x = "male", ymin = m_conv1, ymax = m_conv2, colors = "green")
+plt.vlines(x = "female", ymin = f_conv1, ymax = f_conv2, colors = "black")
+plt.vlines(x = "male", ymin = m_conv1, ymax = m_conv2, colors = "black")
 plt.show()
 plt.clf()
 ```
