--- a/posts/hw8/hw8.qmd
+++ b/posts/hw8/hw8.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Normal Distribution Practice"
+title: "Hypothesis"
 author: Ahyeong Jeong
 date: "2024-08-05"
 categories: [Statistics]
